--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body class="cajaPadre">
     <header class="areaEncabezado">
-        <div> </div><img src="multimedia/lunaheader.jpg" alt=""></div>
+        <div> </div><img class="animacion" src="multimedia/lunanueva.png" alt=""></div>
         
         <hr>
-        <div class="centrar"><img class="logoTamaño" src="multimedia/logo.jpg" alt=""></div>
+        <div class="centrar"><img class="logoTamaño" src="multimedia/logov1.png" alt=""></div>
         <hr>
 
         <nav class="menuPrincipal">
