--- a/paginas/modelos.html
+++ b/paginas/modelos.html
@@ -12,7 +12,7 @@
 <body class="cajaPadre">
     <header class="areaEncabezado">
         
-        <img src="../multimedia/lunaheader.jpg" alt="">
+        <img src="../multimedia/lunanueva.png" alt="">
         <hr>
         <div class="centrar"><img class="logoTamaño" src="../multimedia/logo.jpg" alt=""></div>
         
