--- a/paginas/servicio.html
+++ b/paginas/servicio.html
@@ -10,7 +10,7 @@
 </head>
 <body class="cajaPadre">
     <header class="areaEncabezado">
-        <img src="../multimedia/lunaheader.jpg" alt="">
+        <img src="../multimedia/lunanueva.png" alt="">
         <hr>
         <div class="centrar"> <img class="logoTamaño" src="../multimedia/logo.jpg" alt=""></div>
         <hr>
