--- a/index.html
+++ b/index.html
@@ -18,19 +18,34 @@
         <div class="centrar"><img class="logoTamaño" src="multimedia/logov1.png" alt=""></div>
         <hr>
 
-        <nav class="menuPrincipal">
-            <ul class="colorBlanco" >
-
-                <a href="index.html"><li>Inicio</li></a>
-                <a href="paginas/nosotros.html"><li>Nosotros</li></a>
-                <a href="paginas/servicio.html"><li>Servicio</li></a>
-                <a href="paginas/modelos.html"><li>Modelos</li></a>
-                <a href="paginas/contacto.html"><li>Contacto</li></a>
-            </ul>
-            <hr>
-
-            
-        </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item mx-5">
+                    <a class="nav-link" href="paginas/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/servicio.html">Servicio</a>
+                  </li>
+                  <li class="nav-item mx-5">
+                    <a class="nav-link" href="paginas/modelos.html">Modelos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        
 
 
     </header>
