--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
     <link rel="shortcut icon" href="multimedia/logofavicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body class="cajaPadre">
-    <header class="areaEncabezado">
-        <div> </div><img class="animacion"  src="multimedia/lunanueva.png" alt=""></div>
+<body >
+    <header class="container-fluid">
+        <div class="d-flex justify-content-start"><img class="animacion "  src="multimedia/lunanueva.png" alt=""></div>-->
         
         <hr>
-        <div class="centrar"><img class="logoTamaño" src="multimedia/logov1.png" alt=""></div>
+        <!--  <div class="centrar"><img class="logoTamaño" src="multimedia/logov1.png" alt=""></div>-->
         <hr>
 
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="#"><img class="logoTamaño" src="multimedia/logov1.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
+                  <div class="menufondo"><li class="nav-item mx-5">
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item mx-5">
+                  </li></div>
+                  <div class="menufondo"><li class="nav-item mx-5">
                     <a class="nav-link" href="paginas/nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
+                  </li></div>
+                  <div class="menufondo"><li class="nav-item mx-5">
                     <a class="nav-link" href="paginas/servicio.html">Servicio</a>
-                  </li>
-                  <li class="nav-item mx-5">
+                  </li></div>
+                  <div class="menufondo"><li class="nav-item mx-5">
                     <a class="nav-link" href="paginas/modelos.html">Modelos</a>
-                  </li>
-                  <li class="nav-item">
+                  </li></div>
+                  <div class="menufondo"><li class="nav-item mx-5">
                     <a class="nav-link" href="paginas/contacto.html">Contacto</a>
-                  </li>
+                  </li></div>
                 </ul>
               </div>
             </div>
@@ -50,20 +50,41 @@
 
     </header>
 
-    <main class="areaContenido">
+    <main class="container-fluid  ">
 
-     <h2 class="nuevosModelos">Nuevos modelos</h2>
+     <h1 class=" nuevosModelos  text-center  ">Nuevos modelos</h1>
+     <div id="carouselExampleFade" class="carousel slide carousel-fade  justify-content-center " data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="multimedia/imagen1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="multimedia/imagen2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="multimedia/imagen3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     </main>
 
 
 
-    <footer class="areaFooter">
+    <footer class="container-fluid">
         <hr>
-        <div class="redesSociales">
-            <img src="multimedia/facebook.jpg" alt="">
-            <img src="multimedia/whasap.jpg" alt="">
-            <img src="multimedia/ig.jpg" alt="">
+        <div>
+            <img src="multimedia/facebook.jpg" class="img-fluid" alt="...">
+            <img src="multimedia/whasap.jpg" class="img-fluid" alt="...">
+            <img src="multimedia/ig.jpg" class="img-fluid" alt="..."alt="">
         </div>
         <p class="colorBlanco">Derechos reservados YN</p>
 
