--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ropaymoda</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"></l>
 
     <link rel="shortcut icon" href="multimedia/logofavicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
@@ -21,11 +21,11 @@
         <nav class="menuPrincipal">
             <ul class="colorBlanco" >
 
-                <a href="index.html"><li>Inicio</li></a>
-                <a href="paginas/nosotros.html"><li>Nosotros</li></a>
-                <a href="paginas/servicio.html"><li>Servicio</li></a>
-                <a href="paginas/modelos.html"><li>Modelos</li></a>
-                <a href="paginas/contacto.html"><li>Contacto</li></a>
+               <div class=" bordeMenu"><a href="index.html"><li>Inicio</li></a></div>
+                <div class=" bordeMenu"><a href="paginas/nosotros.html"><li>Nosotros</li></a></div>
+                <div class=" bordeMenu"><a href="paginas/servicio.html"><li>Servicio</li></a></div>
+                <div class=" bordeMenu"><a href="paginas/modelos.html"><li>Modelos</li></a></div>
+                <div class=" bordeMenu"><a href="paginas/contacto.html"><li>Contacto</li></a></div>
             </ul>
             <hr>
 
