--- a/paginas/servicio.html
+++ b/paginas/servicio.html
@@ -10,19 +10,19 @@
 </head>
 <body class="cajaPadre">
     <header class="areaEncabezado">
-        <img src="../multimedia/lunanueva.png" alt="">
+        <img class="animacion" src="../multimedia/lunanueva.png" alt="">
         <hr>
-        <div class="centrar"> <img class="logoTamaño" src="../multimedia/logo.jpg" alt=""></div>
+        <div class="centrar"> <img class="logoTamaño" src="../multimedia/logov1.png" alt=""></div>
         <hr>
 
         <nav class="menuPrincipal">
             <ul class="colorBlanco">
 
-                <a href="../index.html"><li>Inicio</li></a>
-                <a href="nosotros.html"><li>Nosotros</li></a>
-                <a href="servicio.html"><li>Servicio</li></a>
-                <a href="modelos.html"><li>Modelos</li></a>
-                <a href="contacto.html"><li>Contacto</li></a>
+                <div class="bordeMenu "><a href="../index.html"><li>Inicio</li></a></div>
+                <div class="bordeMenu"><a href="nosotros.html"><li>Nosotros</li></a></div>
+                <div class="bordeMenu"><a href="servicio.html"><li>Servicio</li></a></div>
+                <div class="bordeMenu"><a href="modelos.html"><li>Modelos</li></a></div>
+                <div class="bordeMenu"><a href="contacto.html"><li>Contacto</li></a></div>
             </ul>
             <hr>
 
